[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/player/SHIFTprototypeBase2.png" type="Texture" id=1]
[ext_resource path="res://PLAYER.gd" type="Script" id=2]
[ext_resource path="res://scripts/player/barManager.gd" type="Script" id=3]
[ext_resource path="res://sprites/assets/HealthBarFull.png" type="Texture" id=4]
[ext_resource path="res://sprites/assets/HealthBarempty.png" type="Texture" id=5]
[ext_resource path="res://scenes/attackicons.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/assets/cardSelect2.png" type="Texture" id=7]
[ext_resource path="res://debugPlayer.gd" type="Script" id=8]
[ext_resource path="res://deckLogic.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.25, 15.5 )

[sub_resource type="Animation" id=8]
resource_name = "DASHINGanim"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerCenter/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 24, 25, 24, 25, 26 ]
}

[sub_resource type="Animation" id=6]
resource_name = "FALLINGanim"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerCenter/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 35, 36 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IDLEanim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerCenter/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=9]
resource_name = "JUMPINGanim"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerCenter/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 33, 34 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("playerCenter/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RUNNINGanim"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerCenter/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.5, 1.25 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "curserloopOn"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="PLAYER" type="KinematicBody2D"]
script = ExtResource( 2 )
jumpingTime = 0.35
jumpingCooldownTime = 0.1
dashingTime = 0.75

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.25, -15.5 )
shape = SubResource( 2 )

[node name="playerAnimation" type="AnimationPlayer" parent="."]
anims/DASHINGanim = SubResource( 8 )
anims/FALLINGanim = SubResource( 6 )
anims/IDLEanim = SubResource( 3 )
anims/JUMPINGanim = SubResource( 9 )
anims/RESET = SubResource( 4 )
anims/RUNNINGanim = SubResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -37 )
current = true
smoothing_enabled = true
smoothing_speed = 30.0

[node name="playerCenter" type="Node2D" parent="."]

[node name="player" type="Sprite" parent="playerCenter"]
position = Vector2( -3, -20 )
texture = ExtResource( 1 )
hframes = 10
vframes = 7
frame = 1

[node name="range" type="Node2D" parent="playerCenter"]
position = Vector2( -16, -25 )

[node name="jumpTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="jumpBox" type="Area2D" parent="."]

[node name="jumpBoxCollider" type="CollisionShape2D" parent="jumpBox"]
position = Vector2( 0.5, 0.75 )
shape = SubResource( 5 )

[node name="fallJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="barManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="hpBar" type="TextureProgress" parent="barManager"]
margin_left = -120.0
margin_top = -107.0
margin_right = -56.0
margin_bottom = -91.0
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )

[node name="custBar" type="TextureProgress" parent="barManager"]
margin_right = 40.0
margin_bottom = 40.0

[node name="mp" type="TextureProgress" parent="barManager"]
margin_right = 40.0
margin_bottom = 40.0

[node name="hand" type="Node2D" parent="."]

[node name="attackicons" parent="hand" instance=ExtResource( 6 )]
position = Vector2( -113, 25 )
frame = 0

[node name="attackicons2" parent="hand" instance=ExtResource( 6 )]
position = Vector2( -86, 25 )

[node name="attackicons3" parent="hand" instance=ExtResource( 6 )]
position = Vector2( -62, 25 )

[node name="attackicons4" parent="hand" instance=ExtResource( 6 )]
position = Vector2( -40, 24 )

[node name="attackicons5" parent="hand" instance=ExtResource( 6 )]
position = Vector2( -17, 24 )

[node name="curser" type="Sprite" parent="hand"]
position = Vector2( -113, 24 )
texture = ExtResource( 7 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="hand/curser"]
anims/RESET = SubResource( 10 )
anims/curserloopOn = SubResource( 11 )

[node name="debug" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="debug"]
margin_left = -41.0
margin_top = -60.0
margin_right = 15.0
margin_bottom = -20.0
text = "what"

[node name="deckLogic" type="Node2D" parent="."]
script = ExtResource( 9 )

[connection signal="timeout" from="jumpTimer" to="." method="_on_jumpTimer_timeout"]
[connection signal="body_entered" from="jumpBox" to="." method="_on_jumpBox_body_entered"]
[connection signal="timeout" from="fallJumpTimer" to="." method="_on_fallJumpTimer_timeout"]
[connection signal="timeout" from="dashTimer" to="." method="_on_dashTimer_timeout"]
